Updates from Overleaf

--- a/cv.tex
+++ b/cv.tex
@@ -25,6 +25,9 @@
 \name{Vivek L. Kale, PhD}
 
 \begin{resume}
+%\begin{center}
+%\textcolor{gray}{Curriculum Vitae}\\
+%\end{center}
 \vspace{0.2in}
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 
@@ -88,14 +91,13 @@ University of Illinois at Urbana-Champaign, May 2015\\
 \vspace*{0.2in}
 \input{./listOfPubs}
 
-\section{Membership of Organizations}
-\vspace*{0.2in}
-\input{./listOfSocieties}
+%\section{Membership of Organizations}
+%\vspace*{0.2in}
+%\input{./listOfSocieties}
 
-\section{Teaching Experience}
-\vspace*{0.2in}
-\input{./listOfCoursesTaught}
-
+%\section{Teaching Experience}
+%\vspace*{0.2in}
+%\input{./listOfCoursesTaught}
 \section{Services}
 \vspace*{0.2in}
 \input{./listOfServices}
