--- a/listOfAwards.tex
+++ b/listOfAwards.tex
@@ -1,7 +1,9 @@
-\begin{itemize} 
+SC 2017 Early Career Program Invitee and Participant, 2015 Heidelberg Laureate Forum Invitee and Participant, Fellow at Lawrence Livermore National Laboratory through Lawrence Scholar Program
+
+%\begin{itemize} 
 %\item 2018 Argonne Training Program on Exascale Computing Invitee and Participant
-\item SC 2017 Early Career Program Invitee and Participant
-\item 2015 Heidelberg Laureate Forum Invitee and Participant.
+%\item SC 2017 Early Career Program Invitee and Participant
+%\item 2015 Heidelberg Laureate Forum Invitee and Participant.
 %\item Recipient of Travel Grant for 2015 Heidelberg Laureate Forum
-\item Fellow at Lawrence Livermore National Laboratory through Lawrence Scholar Program.
-\end{itemize}
+%\item Fellow at Lawrence Livermore National Laboratory through Lawrence Scholar Program.
+%\end{itemize}
