--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -14,7 +14,8 @@
 
 \underline{Papers}
 \begin{enumerate} 
-\item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
+\item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas Muller Kondorfer, Florina M. Ciorba. \textbf{\textit{Toward a Standard Interface for User-defined Scheduling in OpenMP}}. $15^{th}$ International Workshop on OpenMP. September 2019. Auckland, New Zealand. 
+\item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. $11^{th}$ International Workshop on OpenMP. October 2015. Aachen, Germany.
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
 \item Vivek Kale, Abhinav Bhatele and William D. Gropp. \textbf{\textit{Weighted Locality-sensitive Scheduling for
       Noise Mitigation on Multicore Clusters}}. HiPC 2011. December
@@ -38,7 +39,7 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 
 \underline{Posters}
 \begin{enumerate}
-\item Vivek Kale and Oscar Hernandez. {\bf\textit{Performance Portability of User-defined Loop Schedules}}. DOE PPP 2019. April 2019. Denver, USA.
+\item Vivek Kale and Oscar Hernandez. {\bf\textit{Performance Portability of User-defined Loop Schedules}}. DoE PPP 2019. April 2019. Denver, USA.
 \item Vivek Kale, Harshitha Menon and Karthik Senthil. \textbf{\textit{Adaptive Loop Scheduling with Charm++ to Improve Performance of Scientific Applications}}. SC 2017. November 2017. Denver, USA. \textit{\textcolor{red}{(Selected as a Candidate for Best Poster)}}
 \item Vivek Kale, Simplice Donfack, Laura Grigori and William D. Gropp. \textbf{\textit{Balancing the Tradeoff Between Load Balancing and Locality to Improve Performance of Scientific Applications}}. SC 2014. November 2014. New Orleans, USA.
 \item Vivek Kale, Amanda Randles and William D. Gropp. \textbf{\textit{Locality-Optimized Mixed Static/Dynamic
