--- a/listOfSkillSetsForCV.tex
+++ b/listOfSkillSetsForCV.tex
@@ -1,11 +1,10 @@
-{{\bf Languages}: C, C++, python, Fortran, bash, csh, CUDA}
+{{\bf Languages}: C, C++, python, Fortran, bash, csh}
 
 {{\bf Tools}: LaTeX, gnuplot, emacs, autoconf, cmake, svn}
 
-{{\bf Libraries for Parallelism}: POSIX threads (Pthreads), MPI (mpich3), OpenMP (gomp, llvm), OpenACC (pgi)}
+{{\bf Libraries for Parallelism}: MPI (mpich3), OpenMP (gomp, llvm), POSIX threads (Pthreads) OpenACC (pgi)}
 
 {{\bf Performance Profiling Tools and Libraries}: hpcToolkit, PAPI, nvprof, gprof}
-
 \comments{
 \begin{itemize} 
 \item[] \small Intel Xeon, IBM Power7, AMD Opteron, NVIDIA Keplar, Intel Xeon Phi
