--- a/cv.tex
+++ b/cv.tex
@@ -31,7 +31,7 @@
 {\small 
 \centering
 \textit{Phone}: %\phonenumber[country=US,foreign]{2173697996} .
-\href{tel:12173697996}{+01 1-217-369-7996} .
+\href{tel:12173697996}{+01 217-369-7996} .
 \textit{Email}: vivek.lkale@gmail.com .
 \textit{Web}: \url{http://vlkale.github.io} \\
 }
@@ -47,8 +47,8 @@
 University of Illinois at Urbana-Champaign, May 2007
 %\quad \quad \textit{Undergraduate GPA}: 3.51/4.00\\
 
-\textbf{Master of Science, Computer Science}\\ 
-University of Illinois at Urbana-Champaign, December 2010
+%\textbf{Master of Science, Computer Science}\\ 
+%University of Illinois at Urbana-Champaign, December 2010
 
 \textbf{Doctor of Philosophy, Computer Science}\\
 University of Illinois at Urbana-Champaign, May 2015\\
