--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,12 +1,11 @@
 \textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$May 2019 - present}}
 \begin{itemize}
-\item Broadly, developing novel performance tuning techniques for MPI+OpenMP applications for emerging supercomputers, with a focus on new and challenging computational simulations and next-generation computer architectures.
    \item Contributing to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
    \item Designing and implementing OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
       \item Developing tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
    \item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
    \item Developing benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, NVIDIA's OpenMP, on Exascale Supercomputers.
-   \item Leading hackathons (some virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
+   \item Leading hackathons (including virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
    \item Serving as Technical Project Manager for DoE Exascale Computing Project’s SOLLVE project.
    \item Representing Brookhaven National Laboratory the OpenMP Architecture Review Board. 
 \end{itemize}
@@ -102,7 +101,8 @@ LLNL supercomputers.
 \item Modified libgomp runtime system in order to integrate low-overhead schedulers within it.
 \item Developed an algorithm multi-stage low-overhead loop scheduler with each stage associated with a level in the memory hierarchy, allowing for MPI-shared memory extensions to be used in conjunction with the low-overhead loop scheduling strategies.
 \end{itemize}
-{Goldman-Sachs$\>\>\>\>$Summer Analyst$\>\>\>\>$Jun. ‘09 – Sep. ‘09}
+
+\textbf{Goldman-Sachs$\>\>\>\>$Summer Analyst$\>\>\>\>$Jun. ‘09 – Sep. ‘09}
 \vspace*{-0.0in}
 \begin{itemize}
 \item Wrote code for testing trading system infrastructure functions under extreme market conditions.
