--- a/listOfPubs.tex
+++ b/listOfPubs.tex
@@ -13,9 +13,18 @@
 %\textbf{\underline{Long Articles}}\\
 
 \underline{Papers}
-\begin{enumerate} 
-\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara Chapman and Oscar Hernandez. Toward Supporting MultiGPU targets via taskloop and User-defined Schedules. Proceedings of the 2020 International Workshop of OpenMP. September 23-25, 2020. Austin, USA. (virtual) 
-\item Jonas H Müller Korndörfer, Florina M. Ciorba, Akan Yilmaz, Christian Iwainsky, Johannes Doerfert, Hal Finkel, Vivek Kale, Michael Klemm. \textbf{\textit{A Runtime Approach for Dynamic Load Balancing of OpenMP Parallel Loops in LLVM}}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2019. Denver, Colorado, USA. 
+\begin{enumerate}
+\item Mathialakan Thavappiragasam, Vivek Kale, Oscar Hernandez and  Ada Sedova. \textbf{\textit{Addressing Load Imbalance in Bioinformatics and Biomedical Applications: Efficient Scheduling across Multiple GPUs}} In Proceedings of 12th International Workshop on High Performance Bioinformatics and Biomedicine. December 9, 2021. Houston, Texas, USA. 
+\item Barbara Chapman, Buu Pham, Charlene Yang, Christopher Daley, Colleen Bertoni, Dhruva Kulkarni, Dhruva Kulkarni, Dossay Oryspayev, Ed D’Azevedo, Helen He, Johannes Doerfert, Keren Zhou, Kiran Ravikumar, Mark Gordon, Mauro Del Ben, Meifeng Lin, Melisa Alkan, Michael Kruse, Oscar Hernandez, P. K. Yeung, Paul Lin, Peng Xu, Swaroop Pophale, Tosaporn Sattasathuchana, Vivek Kale, William Huhn and Dhruva Kulkarni. \textbf{\textit{Outcomes of OpenMP Hackathon: OpenMP Application Experiences with the Offloading Model: Part 1}} In Proceedings of 17th International Workshop on OpenMP, IWOMP 2021, Bristol, UK, September 14–16, 2021.
+
+\item Barbara Chapman, Buu Pham, Charlene Yang, Christopher Daley, Colleen Bertoni, Dhruva Kulkarni, Dhruva Kulkarni, Dossay Oryspayev, Ed D’Azevedo, Helen He, Johannes Doerfert, Keren Zhou, Kiran Ravikumar, Mark Gordon, Mauro Del Ben, Meifeng Lin, Melisa Alkan, Michael Kruse, Oscar Hernandez, P. K. Yeung, Paul Lin, Peng Xu, Swaroop Pophale, Tosaporn Sattasathuchana, Vivek Kale, William Huhn and Dhruva Kulkarni. \textbf{\textit{Outcomes of OpenMP Hackathon: OpenMP Application Experiences with the Offloading Model: Part 2}} In Proceedings of 17th International Workshop on OpenMP, IWOMP 2021, Bristol, UK, September 14–16, 2021. 
+
+\item Seonmyeong Bak, Colleen Bertoni, Swen Boehm, Reuben Budiardja, Barbara M. Chapman, Johannes Doerfert, Markus Eisenbach, Hal Finkel, Oscar Hernandez, Joseph Huber, Shintaro Iwasaki, Vivek Kale, Paul R.C. Kent, JaeHyuk Kwack, Meifeng Lin, Piotr Luszczek, Ye Luo, Buu Pham and P.K. Yeung. \textbf{\textit{OpenMP Application Experiences: Porting to Accelerated Nodes}}.  In Journal of Parallel Computing. October 23rd, 2021.
+
+\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara Chapman and Oscar Hernandez. \textbf{\textbf{Toward Supporting MultiGPU targets via taskloop and User-defined Schedules}}. Proceedings of the 2020 International Workshop of OpenMP. September 23-25, 2020. Austin, USA. (virtual) 
+
+\item Jonas H Müller Korndörfer, Florina M. Ciorba, Akan Yilmaz, Christian Iwainsky, Johannes Doerfert, Hal Finkel, Vivek Kale, Michael Klemm. \textbf{\textit{A Runtime Approach for Dynamic Load Balancing of OpenMP Parallel Loops in LLVM}}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2019. Denver, Colorado, USA.
+
 \item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas H. Muller Korndorfer, Florina M. Ciorba. \textbf{\textit{Toward a Standard Interface for User-Defined Scheduling in OpenMP}}. International Workshop on OpenMP. September 23, 2019. Auckland, New Zealand. 
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
@@ -41,6 +50,7 @@ Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 
 \underline{Posters}
 \begin{enumerate}
+\item Raul Torres, Vivek Kale, Abid Malik, Tom Scogland, Roger Ferrer and Barbara M. Chapman. \textbf{\textit{Support in OpenMP for Multi-GPU Parallelism}}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2021. St. Louis, Missouri, USA.
 \item Vivek Kale and Oscar Hernandez. {\bf\textit{Performance Portability of User-defined Loop Schedules}}. DOE PPP 2019. April 2019. Denver, USA.
 \item Vivek Kale, Harshitha Menon and Karthik Senthil. \textbf{\textit{Adaptive Loop Scheduling with Charm++ to Improve Performance of Scientific Applications}}. SC 2017. November 2017. Denver, USA. \textit{\textcolor{red}{(Selected as a Candidate for Best Poster)}}
 \item Vivek Kale, Simplice Donfack, Laura Grigori and William D. Gropp. \textbf{\textit{Balancing the Tradeoff Between Load Balancing and Locality to Improve Performance of Scientific Applications}}. SC 2014. November 2014. New Orleans, USA.
