--- a/listOfPubsShort.tex
+++ b/listOfPubsShort.tex
@@ -13,26 +13,35 @@
 %\textbf{\underline{Long Articles}}\\
 
 \underline{Papers}
-\begin{enumerate}
+\vspace*{-0.05in}
+\begin{enumerate} 
+\item Seonmyeong Bak, Colleen Bertoni, Swen Boehm, Reuben Budiardja, Barbara M. Chapman, Johannes Doerfert, Markus Eisenbach, Hal Finkel, Oscar Hernandez, Joseph Huber, Shi
+ntaro Iwasaki, Vivek Kale, Paul R.C. Kent, JaeHyuk Kwack, Meifeng Lin, Piotr Luszczek, Ye Luo, Buu Pham and P.K. Yeung. \textbf{\textit{OpenMP Application Experiences: Porting to Accelerated Nodes}}. In Journal of Parallel Computing. October 23rd, 2021.
+
 \item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara Chapman and Oscar Hernandez. (To Appear) \textbf{\textit{Toward Supporting MultiGPU targets via taskloop and User-defined Schedules}} Proceedings of the 2020 International Workshop of OpenMP. September 23-25, 2020. Austin, USA. (virtual). 
-\item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas H. Muller Korndorfer, Florina M. Ciorba. \textbf{\textit{Toward a Standard Interface for User-Defined Scheduling in OpenMP}}. International Workshop on OpenMP. September 23, 2019. Auckland, New Zealand. 
+\item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas H. Muller Korndorfer, Florina M. Ciorba. \textbf{\textit{Toward a Standard Interface for User-Defined Scheduling in OpenMP}}. International Workshop on OpenMP. September 23, 2019. Auckland, New Zealand.
+
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
 \item Simplice Donfack, Vivek Kale, Laura Grigori and William D. Gropp. \textbf{\textit{Hybrid Static/Dynamic Scheduling for Already Optimized Dense Matrix Factorizations}}. IPDPS 2012. May 2012. Shanghai, China.
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Load Balancing for Regular Meshes on a Cluster of SMPs with MPI}}. EuroMPI 2010. September 2010. Stuttgart, Germany. \textit{\textcolor{red}{(Selected as a Best Paper)}}
 \item Torsten Hoefler, James Dinan, Darius Buntinas, Pavan Balaji, Brian Barrett, Ron Brightwell, William Gropp, Vivek Kale and Rajeev Thakur. \textbf{\textit{MPI+MPI: A New Hybrid Approach to Parallel Programming with MPI Plus Shared Memory}}. EuroMPI 2012. September 2012. Madrid, Spain.
-\item Amanda Randles, Vivek Kale, Jeff Hammond, William D. Gropp and Efthimios Kaxiras. \textbf{\textit{Performance Analysis of the Lattice
-Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
+%\item Amanda Randles, Vivek Kale, Jeff Hammond, William D. Gropp and Efthimios Kaxiras. \textbf{\textit{Performance Analysis of the Lattice
+%Boltzmann Model Beyond Navier-Stokes}}. IPDPS 2013. May 2013. Boston, USA.
 %\item Vivek Kale and Edgar Solomonik. \textbf{\textit{Parallel Sorting Pattern}}. ParaPLoP 2010. April 2010. Carefree, USA. 
 \end{enumerate} 
 
 \underline{Extended Abstracts}
+\vspace*{-0.05in}
 \begin{enumerate}
 \item Vivek Kale and Martin Kong. \textbf{\textit{Enhancing Support in OpenMP to Improve Data Locality in Application Programs Using Task Scheduling}}. OpenMPCon 2018. September 2018. Barcelona, Spain.
 \end{enumerate}
 
 \underline{Posters}
+\vspace*{-0.05in}
 \begin{enumerate}
 %\item Vivek Kale and Oscar Hernandez. {\bf\textit{Performance Portability of User-defined Loop Schedules}}. DOE PPP 2019. April 2019. Denver, USA.
+\item Raul Torres, Vivek Kale, Abid Malik, Tom Scogland, Roger Ferrer and Barbara M. Chapman. \textbf{\textit{Support in OpenMP for Multi-GPU Parallelism}}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2021. St. Louis, Missouri, USA.
+
 \item Jonas H Müller Korndörfer, Florina M. Ciorba, Akan Yilmaz, Christian Iwainsky, Johannes Doerfert, Hal Finkel, Vivek Kale, Michael Klemm. \textbf{\textit{A Runtime Approach for Dynamic Load Balancing of OpenMP Parallel Loops in LLVM}}. The International Conference for High Performance Computing Networking, Storage, and Analysis. November 19, 2019. Denver, Colorado, USA.
 \item Vivek Kale, Harshitha Menon and Karthik Senthil. \textbf{\textit{Adaptive Loop Scheduling with Charm++ to Improve Performance of Scientific Applications}}. SC 2017. November 2017. Denver, USA. \textit{\textcolor{red}{(Selected as a Candidate for Best Poster)}}
 \end{enumerate}
