--- a/resume.tex
+++ b/resume.tex
@@ -22,16 +22,16 @@
 \vspace{-0.1in}
 \moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 \begin{center}
-\textit{\bf P}: +01 217-369-7996. \textit{\bf E}: vivek.lkale@gmail.com. \textit{\bf W}: http://vlkale.github.io. \\ U.S. Citizen
+\textit{\bf Phone}: +01 217-369-7996. \textit{\bf E-mail}: vivek.lkale@gmail.com. \textit{\bf Web}: http://vlkale.github.io. \\ U.S. Citizen
 \end{center}
 %\moveleft.5\sectionwidth\centerline{U.S. Citizen} 
 \begin{center}
-\moveleft.5\sectionwidth\centerline{{\it \small Objective}: \small Obtain position as software engineer specializing in performance engineering.}
+%\moveleft.5\sectionwidth\centerline{{\it \small Objective}: \small Obtain position as software engineer specializing in performance engineering.}
 \end{center}
 \vspace{-0.5in}
 \small 
 \section{Education}
-\vspace{0.1in}
+\vspace{0.2in}
     \small B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
     \small Ph.D., Computer Science, 2015,  University of Illinois at Urbana-Champaign, {\it Advisor}: William D. Gropp
 \section{Awards}
@@ -43,11 +43,11 @@
 \input{listOfSkillSetsForResume} 
 
 \section{Courses} 
-\vspace{0.1in}
+\vspace{0.2in}
 \input{listOfCoursesShort} 
  
 \section{Experience}
-\vspace{0.1in} 
+\vspace{0.2in} 
 \input{listOfExperiencesShort} 
 
 %\section{Research Overview} 
@@ -61,11 +61,19 @@
 %mitigate the amplification problem, a problem shown to cause serious
 %performance bottlenecks for bulk-synchronous and loosely synchronous
 %MPI applications running on next-generation supercomputers or a
-%cloud-based infrastructure. 
-\vspace{0.1in}
+%cloud-based infrastructure.
 
 \section{Publications}
-\input{listOfPubsShort} 
+\vspace{0.1in}
+\input{listOfPubsShort}
+
+%\section{Services}
+%\vspace*{-0.05in}
+%\input{listOfServices}
+
+\section{Membership in Societies}
+\vspace*{-0.01in}
+\input{listOfSocieties} 
 
 \end{resume}
 \end{document}
