Update listOfExperiences.tex: add sandia

--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -1,19 +1,40 @@
-\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$May 2019 - present}}
+\dates{August 2022 - present}
+\location{Livermore, California, USA}
+\title{Senior Member of Technical Staff}
+\employer{Sandia National Laboratories}
+\textbf{{Sandia National Laboratories $\>$$\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$$\>$August 2022 - present}}
+
 \begin{itemize}
-   \item Contributing to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
-   \item Designing and implementing OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
-      \item Developing tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
-   \item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
-   \item Developing benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, NVIDIA's OpenMP, on Exascale Supercomputers.
-   \item Leading hackathons (including virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
-   \item Serving as Technical Project Manager for DoE Exascale Computing Project’s SOLLVE project.
-   \item Representing Brookhaven National Laboratory the OpenMP Architecture Review Board. 
+\item Contributing to developing and testing features in the US DoE's LLVM's OpenMP implementation.
+\item Contributing to OpenMP 6.0 Specification, specifically on topics of affinity, loop transformations, accelerators and tasking.
+\item Prototyping tunable locality-aware loop scheduling strategy features for OpenMP, and generally user-defined loop schedules, for LLVM's OpenMP implementation.  
+\item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
+\item Owner of Kokkos Software Ecosystem's Kokkos Tools, which provides profiling and debugging capabilities for Kokkos programs (for performance portable parallel programs) as well as sophisticated auto-tuning and performance analysis capabilities. This includes 
+\item Contributor to the Kokkos automated debugging and analysis project of the DoE Xstack project for developing an integrated and coherence exascale HPC software stack for US DoE simulations (following from the ECP project). The goal of this specific project is to use symbolic execution and analysis via LLVM's KLEE to automatically generate tests to detect common Kokkos bugs such as data races. Developing a source-to-source translator via the ROSE compiler plugin for the LLVM's clangASTRewriter to translate a Kokkos program to a Kokkos Model (simplified version of Kokkos) program for analysis by LLVM's Klee. 
+
+\end{itemize}
+
+
+\dates{August 2022 - present}
+\location{Upton, New York, USA}
+\title{Computational Scientist} 
+\employer{Brookhaven National Laboratory} 
+\textbf{{Brookhaven National Laboratory $\>$$\>$$\>$$\>$Computational Scientist$\>$$\>$$\>$$\>$May 2019 - August 2022}}
+\begin{itemize}
+   \item Contributed to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
+   \item Designed and implemented OpenMP task-to-multiGPU scheduling strategies to improve within-node load balancing of applications running on supercomputers having multiple GPUs per node.
+   \item Developed tunable locality-aware loop scheduling strategies, and generally user-defined loop schedules, in LLVM's OpenMP implementation, in the context of MPI+OpenMP applications runnning on supercomputers having multicore processors and GPUs. 
+   \item Contributed to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
+   \item Developed benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, NVIDIA's OpenMP, on Exascale Supercomputers.
+   \item Led hackathons (including virtual) for using OpenMP on Department of Energy's Exascale Supercomputers.
+   \item Served as Technical Project Manager for US DoE Exascale Computing Project’s SOLLVE project to develop LLVM's OpenMP.
+   \item Represented Brookhaven National Laboratory in the OpenMP Architecture Review Board. 
 \end{itemize}
 
 \dates{June 2018 - April 2019}
-\location{Champaign, Illinois}
+\location{Champaign, Illinois, USA}
 \title{Software Developer}
-\employer{Charmworks, Inc.} 
+\employer{Charmworks, Inc.}
 \textbf{Charmworks, Inc. $\>$$\>$$\>$$\>$Software Developer$\>$$\>$$\>$$\>$June 2018 - April 2019}
 %\begin{position}
 \vspace{0.0in}
@@ -30,7 +51,7 @@
 \end{itemize}
 %\end{position}
 
-\textbf{University of Southern California$\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$December 2016 - June 2018}
+\textbf{University of Southern California / ISI $\>$$\>$$\>$$\>$Computer Scientist$\>$$\>$$\>$$\>$December 2016 - June 2018}
 \vspace*{-0.0in} 
 \begin{itemize}
 \item Worked with postdoc from LLNL on a proposal to study
