putting in 1 pager

--- a/resume-1pager.tex
+++ b/resume-1pager.tex
@@ -34,18 +34,15 @@
 \vspace{0.2in}
     \small B.S., Computer Science, 2007, University of Illinois at Urbana-Champaign\\
     \small Ph.D., Computer Science, 2015,  University of Illinois at Urbana-Champaign, {\it Advisor}: William D. Gropp
-\section{Awards}
-\vspace{0.1in}
-\input{listOfAwards} 
+
+%\section{Awards}
+%\vspace{0.1in}
+%\input{listOfAwards} 
 
 \section{Technical Skills} 
 \vspace{0.1in}
 \input{listOfSkillSetsForResume} 
 
-\section{Courses} 
-\vspace{0.2in}
-\input{listOfCoursesShort} 
- 
 \section{Experience}
 \vspace{0.2in} 
 \input{listOfExperiencesShort} 
@@ -63,17 +60,15 @@
 %MPI applications running on next-generation supercomputers or a
 %cloud-based infrastructure.
 
-\section{Publications}
+\section{Highlights of Publications}
 \vspace{0.1in}
-\input{listOfPubsShort}
+\input{listOfPubsHighlights}
 
-%\section{Services}
-%\vspace*{-0.05in}
-%\input{listOfServices}
+% \section{Products Developed} 
 
-\section{Membership in Societies}
-\vspace*{-0.01in}
-\input{listOfSocieties} 
+%\section{Membership in Societies}
+%\vspace*{-0.01in}
+%\input{listOfSocieties} 
 
 \end{resume}
 \end{document}
