pushing all new pubs

--- a/cv.tex
+++ b/cv.tex
@@ -31,8 +31,8 @@
 {\small 
 \centering
 \textit{Phone}: %\phonenumber[country=US,foreign]{2173697996} .
-\href{tel:12173697996}{+01 217-369-7996} .
-\textit{Email}: vivek.lkale@gmail.com .
+\href{tel:12173697996}{+01 217-369-7996}
+\textit{Email}: \url{vivek.lkale@gmail.com} 
 \textit{Web}: \url{http://vlkale.github.io} \\
 }
 
