--- a/listOfPubsShort.tex
+++ b/listOfPubsShort.tex
@@ -15,10 +15,18 @@
 \underline{Papers}
 \vspace*{-0.05in}
 \begin{enumerate} 
-\item Seonmyeong Bak, Colleen Bertoni, Swen Boehm, Reuben Budiardja, Barbara M. Chapman, Johannes Doerfert, Markus Eisenbach, Hal Finkel, Oscar Hernandez, Joseph Huber, Shi
-ntaro Iwasaki, Vivek Kale, Paul R.C. Kent, JaeHyuk Kwack, Meifeng Lin, Piotr Luszczek, Ye Luo, Buu Pham and P.K. Yeung. \textbf{\textit{OpenMP Application Experiences: Porting to Accelerated Nodes}}. In Journal of Parallel Computing. October 23rd, 2021.
+\item Mathialakan Thavappiragasasm and Vivek Kale. \textbf{\it CPU-GPU Performance Tuning for Improving Performance of Modern Scientific Applications on Exascale Supercomputers}. IEEE HiPC 2023. Goa, India. December 18-21, 2023. 
+\item Shravan Kale, Kevin Huck, David Boehme, Vanessa Surjadidjaja and Vivek Kale. \textbf{\it Performance Analysis and Auto-tuning Tools for Performance Portable Parallel Programs.} 2023 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. Denver, CO, USA. November 12-17, 2023. 
 
-\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara Chapman and Oscar Hernandez. (To Appear) \textbf{\textit{Toward Supporting MultiGPU targets via taskloop and User-defined Schedules}} Proceedings of the 2020 International Workshop of OpenMP. September 23-25, 2020. Austin, USA. (virtual). 
+\item Vivek Kale, Vanessa Surjadidjaja, Christian Trott and James Brandt. \textbf{\it Data Order Reduction for Performance Monitoring of Supercomputers via the Kokkos Tools Sampler Utility. } LDMSCon 2023. Boston, MA, USA. June 13-15, 2023. 
+
+\item Vivek Kale and Shyamali Mukherjee. \textbf{\it Tools to Rapidly Develop Sophisticated HPC Software Libraries}. SIAM Computational Science and Engineering Conference 2023. Amsterdam, Netherlands. March 2, 2023. 
+
+\item Mathialakan Thavappiragasam and Vivek Kale. \textbf{ \it OpenMP’s Asynchronous Offloading for All-pairs Shortest Path Graph Algorithms on GPUs}  HiPar 2022 Workshop at The 2022 ACM/IEEE International Conference for High Performance Computing Networking, Storage, and Analysis. November 16, 2022. Dallas, Texas, USA.
+
+\item Seonmyeong Bak, Colleen Bertoni, Swen Boehm, Reuben Budiardja, Barbara M. Chapman, Johannes Doerfert, Markus Eisenbach, Hal Finkel, Oscar Hernandez, Joseph Huber, Shintaro Iwasaki, Vivek Kale, Paul R.C. Kent, JaeHyuk Kwack, Meifeng Lin, Piotr Luszczek, Ye Luo, Buu Pham and P.K. Yeung. \textbf{\textit{OpenMP Application Experiences: Porting to Accelerated Nodes}}. In Journal of Parallel Computing. October 23rd, 2021.
+
+\item Vivek Kale, Wenbin Lu, Anthony Curtis, Abid Malik, Barbara Chapman and Oscar Hernandez. \textbf{\textit{Toward Supporting MultiGPU targets via taskloop and User-defined Schedules}} Proceedings of the 2020 International Workshop of OpenMP. September 23-25, 2020. Austin, USA. (virtual). 
 \item Vivek Kale, Christian Iwainsky, Michael Klemm, Jonas H. Muller Korndorfer, Florina M. Ciorba. \textbf{\textit{Toward a Standard Interface for User-Defined Scheduling in OpenMP}}. International Workshop on OpenMP. September 23, 2019. Auckland, New Zealand.
 
 \item Vivek Kale and William D. Gropp. \textbf{\textit{Composing Low-Overhead Scheduling Strategies for Improving Performance of Scientific Applications}}. IWOMP 2015. October 2015. Aachen, Germany.
