adding list of experiences

--- a/listOfExperiences.tex
+++ b/listOfExperiences.tex
@@ -2,18 +2,15 @@
 \location{Livermore, California, USA}
 \title{Senior Member of Technical Staff}
 \employer{Sandia National Laboratories}
-\textbf{{Sandia National Laboratories $\>$$\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$$\>$August 2022 - present}}
+\textbf{{Sandia National Laboratories $\>$$\>$$\>$ Senior Member of Technical Staff $\>$$\>$$\>$August 2022 - present}} 
 
 \begin{itemize}
-\item Contributing to developing and testing features in the US DoE's LLVM's OpenMP implementation.
+\item Developing and testing features in the US DoE's LLVM's OpenMP implementation. 
 \item Contributing to OpenMP 6.0 Specification, specifically on topics of affinity, loop transformations, accelerators and tasking.
 \item Prototyping tunable locality-aware loop scheduling strategy features for OpenMP, and generally user-defined loop schedules, for LLVM's OpenMP implementation.  
-\item Contributing to the OpenMP Language Committee to support OpenMP parallelization on multiple GPUs of a node for C, C++ and Fortran, and for user-defined schedules in OpenMP.
-\item Owner of Kokkos Software Ecosystem's Kokkos Tools, which provides profiling and debugging capabilities for Kokkos programs (for performance portable parallel programs) as well as sophisticated auto-tuning and performance analysis capabilities. This includes 
-\item Contributor to the Kokkos automated debugging and analysis project of the DoE Xstack project for developing an integrated and coherence exascale HPC software stack for US DoE simulations (following from the ECP project). The goal of this specific project is to use symbolic execution and analysis via LLVM's KLEE to automatically generate tests to detect common Kokkos bugs such as data races. Developing a source-to-source translator via the ROSE compiler plugin for the LLVM's clangASTRewriter to translate a Kokkos program to a Kokkos Model (simplified version of Kokkos) program for analysis by LLVM's Klee. 
-
+\item Owner of Kokkos Software Ecosystem's Kokkos Tools, which provides profiling and debugging capabilities for Kokkos programs (for performance portable parallel programs) as well as sophisticated auto-tuning and performance analysis capabilities.
+\item Contributor to the DOE ASCR Xstack project on automated test generation for parallel programs via LLVM. Developing a source-to-source translator via the ROSE compiler plugin for the LLVM's clangASTRewriter to translate a Kokkos program to a Kokkos Model (simplified version of Kokkos) program for analysis by LLVM's Klee symbolic execution library.
 \end{itemize}
-
 
 \dates{August 2022 - present}
 \location{Upton, New York, USA}
